infrastructure/talos/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  defaultBackend:
    service:
      name: longhorn-frontend
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - longhorn
